bad/assign_binop_anne_array.example_compiler_output
ERROR
[1mbad/assign_binop_anne_array.lat:5:12: [1;31merror: [0;1mleft side is not assignable[m
	x != null = new int[3];
	          [1;32m^[m
[1mbad/assign_binop_anne_array.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	x != null = new int[3];
	[1;32m^[m
